# ec-test-app

./: .gitignore  CODEOWNERS  README.md
acpi/: ectest.asl  fan.asl
docs/: ec_integration_guide.md  ec_requirements_guide.md
exe/: ectest.cpp  ectest_app.vcxproj
inc/: eclib.h  ectest.h
kmdf/: device.c  device.h  driver.c  driver.h  ectest.inx  ectest_kmdf.vcxproj  public.h  queue.c  queue.h  trace.h
lib/: eclib.c  eclib.vcxproj
rust/: Cargo.toml  build.rs
rust/src/: acpi.rs  app.rs  battery.rs  common.rs  lib.rs  main.rs  mock.rs  rtc.rs  thermal.rs  ucsi.rs
